menu and text changed

--- a/Cooling.html
+++ b/Cooling.html
@@ -69,12 +69,12 @@
 			<li id="nav-support" class="dropdown">
               <a href="./Techjournals.html" class="dropbtn">Tech Journals</a>
             <div class="dropdown-content">
-			<a href="./Chassis.html" target="_blank">Chassis</a>
-            <a href="./Swingarm.html" target="_blank">Swingarm</a>
-            <a href="./Engine.html" target="_blank">Engine</a>
-            <a href="./Aero.html" target="_blank">Aero</a>
-            <a href="./Cooling.html" target="_blank">Cooling</a>
-            <a href="./exhausts.html" target="_blank">Exhausts</a>
+			<a href="./Chassis.html">Chassis</a>
+            <a href="./Swingarm.html">Swingarm</a>
+            <a href="./Engine.html">Engine</a>
+            <a href="./Aero.html">Aero</a>
+            <a href="./Cooling.html">Cooling</a>
+            <a href="./exhausts.html">Exhausts</a>
 			</div>
 			</li>
 			<li id="nav-data" class="">
@@ -144,27 +144,25 @@
         I would like to be at the point where I could see what the pressures were in different parts of the engine as I know I have huge pressures around the jackets and I am simply masking it with a huge cooling system. Normalised race temp is currently 92°C; this is a far from ideal performance temperature. 75-80°C is where the optimum trade between power and reliability exists. I am throwing away a good 5hp which is just not on.
 The additional water, rads, pipes and ducting is costing me performance in so many ways it’s upsetting; the drag of air passing through so much finned vertical faces, the weight of all that water, the mechanical strain of pushing all that water, the additional width to my frontal area and the compromise to the high pressure ducting to the engine. The answer is to make my own engine with thicker sections around the bores and use composite coatings. It would mean making everything again as I would have so much space to use for all the good things again. Perhaps a compromise would be to do the engine and keep everything the same but slow the flow right down? Maybe not, I’m getting older faster, best not stitch myself up for another 5 years of work just yet.
       </div>
-          </div>
 	  	  <div class="grid-narrow-center">
         <h2>Foundry needed</h2>
 	  The multiple last place finishes have been down to the steering and/or spikes in poor cooling. I have built in many safe guards to protect the engine from melting. Anything over 85 degrees and the acceleration injection correction starts to drop off, mixture richens and advance drops. The ECU then monitors conditions as the temp rises further which effectively drops performance to the point where it feels like you are towing a dead horse. It does just enough to let me coast for the remaining laps and try to maintain corner speed whilst cruising down the straights just to get lap experience. There is so much to evaluate as well as ‘race’ that the amount of laps needed is high. If my calculations are right; at 14K rpm it is flowing a massive 3.3 litres of water every second! The temperature rises 5 degrees by dropping to 10K rpm; I like (or perhaps in this case I don't like) to imagine the pockets of dancing steam around the jackets at those temperatures, surface temperature of the pistons must be pushing high 300’s. Not helped by the fact that modern pistons are so wasted there is less surface to conduct the heat to the thermally inferior liners. If only I had a foundry!
         </div>
 		<div class="grid-wide-center">
-		<div class="contain">
-			<div class="category1">
-			<img src="img/001.jpg" width="490px" height="auto">
+		<div class="contain2">
+			
+			<img src="img/001.jpg" class="category2" width="490px" height="auto">
 			<div class="image-text">
 					Cut through of the air flow through the seat section passing through the curved radiator
 			</div>
-			</div>
-			<div class="category2">
-			<img src="img/frontrads.jpg" width="300px" height="auto">
+			<img src="img/frontrads.jpg" class="category2" width="300px" height="auto">
 			<div class="image-text">
 					Front radiators making the most of the avaliable high pressure airflow
 			</div>
 			</div>
 		</div>
-		</div>	
+		</div>
+</div>		
 </div>		
         <div id="footer-background">
           <p> <span style="font: 3.5em 'Oswald', sans-serif"> PARKES </span> <br> The Road Race Motorcycle </p>
