--- a/Introduction.html
+++ b/Introduction.html
@@ -63,12 +63,12 @@
 			<li id="nav-support" class="dropdown">
               <a href="./Techjournals.html" class="dropbtn">Tech Journals</a>
             <div class="dropdown-content">
-			<a href="./Chassis.html" target="_blank">Chassis</a>
-            <a href="./Swingarm.html" target="_blank">Swingarm</a>
-            <a href="./Engine.html" target="_blank">Engine</a>
-            <a href="./Aero.html" target="_blank">Aero</a>
-            <a href="./Cooling.html" target="_blank">Cooling</a>
-            <a href="./exhausts.html" target="_blank">Exhausts</a>
+			<a href="./Chassis.html">Chassis</a>
+            <a href="./Swingarm.html">Swingarm</a>
+            <a href="./Engine.html">Engine</a>
+            <a href="./Aero.html">Aero</a>
+            <a href="./Cooling.html">Cooling</a>
+            <a href="./exhausts.html">Exhausts</a>
 			</div>
 			</li>
 			<li id="nav-data" class="">
@@ -97,10 +97,10 @@
         <div class="grid-span">
           <h2>The history behind it</h2>
           Back in 2012, I started to think that having raced many modern bikes I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement I
-          started to think about what was missing; a relationship; the psychology of what was below me. What if I believed I could build something better; something purpose built for racing? To go against the grain and start enjoying racing again I purchased a £900 VFR800 that looked like it had been pulled
-          out of the sea in Southampton in 2012. My plan was to always build a frame but what it would look like and what materials were mere minor details; it would happen, in good time.<br>
-          As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been made by myself using my own machines; prodomently manual with infrequent CNC work, along with extensive hand fabrication techniques or for the few components I have
-          not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere.
+          started to think about what was missing; a relationship; the psychology of what was below me. What if I believed I could build something better; something purpose built for racing? To go against the grain and start enjoying racing again I purchased a £900 VFR800 that looked like it had been dredged
+          up out of the sea. My plan was to always build a frame but what it would look like and what materials were mere minor details; it was going to happen.<br>
+          As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been designed and made by myself using my own machines; prodomently manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, panel forming, vacuum infusion, clay moulding or for the few components I have
+          not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings.
           <div class="image-right-container" width="350px">
             <img src="img/002.jpg" class="image-right" width="330px">
             <div class="image-text">
@@ -110,18 +110,19 @@
         </div>
         <div class="grid-left-two">
           <h2>The business</h2>
-          A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up a busy 7 day working week. I took the VFR in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
+          A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up a busy 7 day working week. In that time I took the VFR in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
           southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying underneath the broken
           Connor Cummins in the helicopter on the way Nobles hospital I decided that I was done with the boredom of modern racing; tired of the same 600’s and 1000’s being painted a different colour with excessively priced extras. The hay days of riding for teams and sponsers were long gone and 
 		  at the time I had spent my hard earned money
           on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class before I got a chance to start pushing. <br>
 		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
           Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day; I would look like I had! If I only worked on everyone else’s bike I wouldn’t learn how to
-          build a chassis. On that thought; I have a dim view of the education on offer these days; not enough flexibility to think outside the box; and they take too long. These days I believe we can all
-          out perform any University degree with whats available on line and some motivation. It's not likely to change so I shouldn't moan. So my ethos is to
-          crack on and learn the hard way.
+          build a chassis. On that thought; education has for quite some time been sold as a make or break life event; perhaps I am too sinnicle but the generations who have gone through University because they lost their way really stand out to me. There is also not enough flexibility to think outside the box. These days I believe we can all
+          stand taller without a University degree with what is available to us using resources online and networking along with motivation.
+          
         </div>
       </div>
+	  <p>
       <div class="grid-right-three">
         <h2>Getting stuck in</h2>
         <div class="image-left-container" width="390px">
@@ -135,13 +136,14 @@
         designs and philosophy was fresh and untainted. That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories
         (what’s the point – at best you would just be copying someone else!). The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics and the tricky one: patience. 7 engines later and 3 rising rate suspension geometries have taught me a lot
          and testing in the Isle of man has accelerated that rate 10 fold. Take a look at the technical journeys across the site and maybe look out for upcoming events… you’ll hear it coming for sure!
-      </div>
+      <p>
+	  </div>
       <div class="grid-wide-center">
         <h2>So who am I?</h2>
-        So who am I? My name is Tom Parkes, I’m 31 at the time of writing this and have been building and racing my own chassis for 3 years now. The deeper I go, the more sense it makes; the big OEM’s are bound by performance metrics; fearful of research and
-        design with professional rider’s balls bursting for success. Who would want to risk it all and fail like those that have come and gone before. They let someone else do the innovation and risk and they'll soon snatch up the good ideas and spend the proceeding decades refining it.
-		Despite not getting on the podium at the toughest race tracks in the world; I believe it’s very early days and unbeknown to most, I can see some real potential in it. At slower speeds it’s the
-        best bike I’ve ever ridden; smooth, solid and exciting, with a useful ability to steer wherever you want whilst your braking.
+        So who am I? My name is Tom Parkes, I’m 31 at the time of writing this and have been desinging, building and racing my own chassis for 3 years. At slower speeds it’s the
+        best bike I’ve ever ridden; smooth, solid and exciting, with a useful ability to steer wherever you want whilst your braking. The deeper I go, the more sense it makes; the big OEM’s are bound by performance metrics; fearful of research and
+        design with professional rider’s balls bursting for success. Who would want to risk it all and fail?
+		Despite not getting on the podium at the toughest race tracks in the world; I believe it’s very early days. I can see huge potential in what I can do now.
         <br>
         <div class="image-right-container" width="350px">
           <img src="img/me2.jpg" class="image-right" width="330px">
@@ -149,10 +151,12 @@
             Tom Parkes
           </div>
         </div>
-        Motivation has been easy to find as the project has picked up momentum as I try to challenge convention. I'm actually not a massive fan of all things motorcycle. Most of the top racers live and breath bikes day and night. I don't keep upto date with
-        national or international racers; I watch one or two GP's a year if I'm not too busy in the shed when the repeats are on. I don't watch much TV either; mostly repeats from years ago.
-        The machining skills and fabrication ability is all learnt on the go. People would often scare me that gearbox's were the work of the devil and I should never peak inside or I would be haunted for
-        eternity. My curiosity wouldn't stop me and once inside; I found it quite easy. I was about 19 at the time and as new challenges came and went I found I wasn't phased by much, buying the tools and machines I needed to do the job, some things just needed more concentration than others.
+        Motivation has been easy to find as my project has picked up momentum as I try to challenge the blind convention. The machining skills and fabrication ability is all learnt on the go and self taught. When I was 19 I was fortunate to be let loose on a lathe by a good friend of my father's. It was better than tuition; he didn't teach me how to operate it but instead provoked me to learn by feel.
+		<br>
+		People would recite that gearbox's were the work of the devil and I should never peak inside or I would be haunted for
+        eternity. My sense of curiosity immediately wanted in; and once inside, I found it quite easy. I was about 19 at the time and as new challenges came and went I found I wasn't phased by much, buying the tools and machines I needed to do the job, some things just needed more concentration than others. I'm actually not a massive fan of all things motorcycle. I don't keep upto date with
+        national or international racers; I watch one or two GP's a year if I'm not too busy in the shed. I don't watch TV either, I would rather find something to do.
+        
       </div <div class="grid-narrow-center">
       <h2>Look out for other new projects</h2>
       Keep an eye out for the new carbon fibre Parkes mountain bike project
