--- a/Contact.html
+++ b/Contact.html
@@ -67,12 +67,12 @@
 			<li id="nav-support" class="dropdown">
               <a href="./Techjournals.html" class="dropbtn">Tech Journals</a>
             <div class="dropdown-content">
-			<a href="./Chassis.html" target="_blank">Chassis</a>
-            <a href="./Swingarm.html" target="_blank">Swingarm</a>
-            <a href="./Engine.html" target="_blank">Engine</a>
-            <a href="./Aero.html" target="_blank">Aero</a>
-            <a href="./Cooling.html" target="_blank">Cooling</a>
-            <a href="./exhausts.html" target="_blank">Exhausts</a>
+			<a href="./Chassis.html">Chassis</a>
+            <a href="./Swingarm.html">Swingarm</a>
+            <a href="./Engine.html">Engine</a>
+            <a href="./Aero.html">Aero</a>
+            <a href="./Cooling.html">Cooling</a>
+            <a href="./exhausts.html">Exhausts</a>
 			</div>
 			</li>
 			<li id="nav-data" class="">
@@ -105,14 +105,14 @@
       <div class="main-container">
         <div class="grid-left-two">
           <h2>Get in touch</h2>
-          If you are interested in the technical detail or can offer the use of your foundary to cast my own engine then you can contact me through the enquiry form below:
+          You can contact me through the enquiry form below:
         </div>
         <div class="entry-content content">
           <div class='gf_browser_unknown gform_wrapper' id='gform_wrapper_1'>
 		  
             <form id="contactform" action="" method="POST" target="no-target" accept-charset="utf-8">
               <div class='gform_heading'>
-                <span class='gform_description'>Please use this form if you have a Sponsorship or Media related enquiry, and we will get back to you as soon as possible.</span>
+                <span class='gform_description'>Please use this form if you have a Sponsorship or Media related enquiry, and I will get back to you as soon as possible.</span>
               </div>
               <ul class='gform_fields top_label form_sublabel_below description_below' id='gform_fields_1'>
                 <li id='field_1_1' class='gfield field_sublabel_below field_description_below gfield_visibility_visible'>
