--- a/Techjournals.html
+++ b/Techjournals.html
@@ -60,12 +60,12 @@
             <li id="nav-support" class="dropdown">
               <a href="./Techjournals.html" class="dropbtn">Tech Journals</a>
               <div class="dropdown-content">
-                <a href="./Chassis.html" target="_blank">Chassis</a>
-                <a href="./Swingarm.html" target="_blank">Swingarm</a>
-                <a href="./Engine.html" target="_blank">Engine</a>
-                <a href="./Aero.html" target="_blank">Aero</a>
-                <a href="./Cooling.html" target="_blank">Cooling</a>
-                <a href="./exhausts.html" target="_blank">Exhausts</a>
+                <a href="./Chassis.html">Chassis</a>
+                <a href="./Swingarm.html">Swingarm</a>
+                <a href="./Engine.html">Engine</a>
+                <a href="./Aero.html">Aero</a>
+                <a href="./Cooling.html">Cooling</a>
+                <a href="./exhausts.html">Exhausts</a>
               </div>
             </li>
             <li id="nav-data" class="">
@@ -91,22 +91,22 @@
       <div style="height:100px"></div>
       <div class="support-flexbox">
         <div class="support-link">
-          <a href="./Chassis.html" target="_blank">Chassis</a>
+          <a href="./Chassis.html">Chassis</a>
         </div>
         <div class="support-link">
-          <a href="./Swingarm.html" target="_blank">Swingarm</a>
+          <a href="./Swingarm.html">Swingarm</a>
         </div>
         <div class="support-link">
-          <a href="./Engine.html" target="_blank">Engine</a>
+          <a href="./Engine.html">Engine</a>
         </div>
         <div class="support-link">
-          <a href="./Aero.html" target="_blank">Aero</a>
+          <a href="./Aero.html">Aero</a>
         </div>
         <div class="support-link">
-          <a href="./Cooling.html" target="_blank">Cooling</a>
+          <a href="./Cooling.html">Cooling</a>
         </div>
         <div class="support-link">
-          <a href="./exhaust.html" target="_blank">Exhaust</a>
+          <a href="./exhaust.html">Exhaust</a>
         </div>
       </div>
     </div>
