tech journal change

--- a/Techjournals.html
+++ b/Techjournals.html
@@ -106,7 +106,7 @@
           <a href="./Cooling.html">Cooling</a>
         </div>
         <div class="support-link">
-          <a href="./exhaust.html">Exhaust</a>
+          <a href="./exhausts.html">Exhausts</a>
         </div>
       </div>
     </div>
