--- a/Introduction.html
+++ b/Introduction.html
@@ -131,19 +131,19 @@
             Developments in 2017
           </div>
         </div>
-        I returned from the Island and set about getting some T45 tube and some oxyacetylene and making a start. Drying the sand and ramming it in to produce a hot bend took a lot of practice and perhaps a year of many bends to get that real feel for what’s
-        going on. Every technical hurdle would spark a brief research through textbooks but something I was always adamant of was to stay away from any design or guidance that had been done before. If it exists I’m not interested in it. I needed to ensure my
+        I returned from the Island and set about getting some T45 tube and some oxyacetylene and making a start. Drying the sand and compressing it in to produce a hot bend took a lot of patience and perhaps a year of many bends to get that real feel for what’s
+        going on. Every technical hurdle would spark a spell of research through textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design or guidance that had been done before. If it exists I’m not interested in it. I needed to ensure my
         designs and philosophy was fresh and untainted. That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories
-        (what’s the point – at best you would just be copying someone else!). The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics and the tricky one: patience. 7 engines later and 3 rising rate suspension geometries have taught me a lot
+        (what’s the point – at best you would just be copying someone else!). The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics as well as honing my patience. 7 engines later and 3 rising rate suspension geometries have taught me a lot
          and testing in the Isle of man has accelerated that rate 10 fold. Take a look at the technical journeys across the site and maybe look out for upcoming events… you’ll hear it coming for sure!
       <p>
 	  </div>
       <div class="grid-wide-center">
         <h2>So who am I?</h2>
-        So who am I? My name is Tom Parkes, I’m 31 at the time of writing this and have been desinging, building and racing my own chassis for 3 years. At slower speeds it’s the
+        My name is Tom Parkes, I’m 31 at the time of writing this and have been designing, building and racing my own chassis for 3 years. At slower speeds it’s the
         best bike I’ve ever ridden; smooth, solid and exciting, with a useful ability to steer wherever you want whilst your braking. The deeper I go, the more sense it makes; the big OEM’s are bound by performance metrics; fearful of research and
         design with professional rider’s balls bursting for success. Who would want to risk it all and fail?
-		Despite not getting on the podium at the toughest race tracks in the world; I believe it’s very early days. I can see huge potential in what I can do now.
+		Despite not getting on the podium at the toughest race tracks in the world; I believe it has huge potential and in what I can do.
         <br>
         <div class="image-right-container" width="350px">
           <img src="img/me2.jpg" class="image-right" width="330px">
@@ -151,15 +151,18 @@
             Tom Parkes
           </div>
         </div>
-        Motivation has been easy to find as my project has picked up momentum as I try to challenge the blind convention. The machining skills and fabrication ability is all learnt on the go and self taught. When I was 19 I was fortunate to be let loose on a lathe by a good friend of my father's. It was better than tuition; he didn't teach me how to operate it but instead provoked me to learn by feel.
+        Motivation has been easy to find as the project has picked up momentum as I try to challenge the blind convention. The machining skills and fabrication ability is all learnt on the go and self taught. When I was 19 I was fortunate to be trained on a lathe by a good friend of my father's. It was better than tuition; he didn't teach me how to operate it but instead provoked me to learn by feel.
 		<br>
 		People would recite that gearbox's were the work of the devil and I should never peak inside or I would be haunted for
-        eternity. My sense of curiosity immediately wanted in; and once inside, I found it quite easy. I was about 19 at the time and as new challenges came and went I found I wasn't phased by much, buying the tools and machines I needed to do the job, some things just needed more concentration than others. I'm actually not a massive fan of all things motorcycle. I don't keep upto date with
-        national or international racers; I watch one or two GP's a year if I'm not too busy in the shed. I don't watch TV either, I would rather find something to do.
+        eternity. My sense of curiosity immediately wanted in; and once inside, I found it quite easy. I was about 19 at the time and as new challenges came and went I found I wasn't phased by much, buying the tools and machines I needed to do the job, some things just needed more concentration than others. I'm strangely not a great fan of all things motorcycle. I don't keep upto date with
+        national or international racers; I watch one or two Grand prixs a year if I'm not too busy. I don't watch TV either, I would rather find something to do.
+		
+		<br>
+		
         
       </div <div class="grid-narrow-center">
       <h2>Look out for other new projects</h2>
-      Keep an eye out for the new carbon fibre Parkes mountain bike project
+      Keep an eye out for the new carbon fibre Parkes mountain bike project; trialling a new suspension system.
     </div>
   </div>
 </div>
