swingarm picture added

--- a/Events.html
+++ b/Events.html
@@ -112,8 +112,7 @@
       </div>
       <div class="grid-right-three">
         <h2>Road Racing</h2>
-        It wouldn't be right to design and build a road race bike and not use it as such; This years line up will be different, we're holding back on entering isle of man and irish road races at the moment:
-		- Registered interest to compete in the new Welsh Road Race
+        It wouldn't be right to design and build a road race bike and not use it as such; watch this space for updates on upcoming road race events
 	  </div>
       <div class="grid-wide-center">
         <h2>Trackdays</h2>
