--- a/Swingarm.html
+++ b/Swingarm.html
@@ -122,14 +122,22 @@
           quite surprised to see how much material there was particularly around the shock linkage mount and just how little there was towards the hub clamp. I could see some good scope for improvement. The ‘jaws’ as I call them that grasp the hub are equally poorly supported and could see the source of
           the flex. An improvement would be to make one side of the jaw short and rigid whilst reducing the length of the opposing jaw as much as possible in an effort to reduce both lateral and torsional flex.
         </div>
+		
+		<div class="image-left-container" width="400px">
+          <img src="img/arm.jpg" class="image-left" width="380px">
+          <div class="image-text">
+            Outter panel cold rolled and trimmed to fit
+          </div>
+        </div>
+		
         <div class="grid-wide-center">
           <h2>The new one</h2>
           First job was to benchmark the stiffness of the standard one which I had braced. I made a quick jig out of scrap steel to mount it rigidly and employed the services of a calibrated father figure to lean against it. The theory was to mark a spot on
           the floor about a meter away from the centre of the hub and get my dad to place his toes on the line. Then simply lean onto the swingarm, placing his hands on it first but allowing it to just touch his chest. I then took the measurements from the
           wall both before and after. That was my benchmark; 2mm of deflection measured at the furthest point on the swingarm.
         </div>
-        <div class="image-left-container2">
-          <img src="img/34.jpg" class="image-left" width="170px">
+        <div class="image-right-container2">
+          <img src="img/34.jpg" class="image-right" width="170px">
           <div class="image-text">
             Cushless drive, hub and axle - 2.4Kg reduction in reciprocating mass
           </div>
