--- a/Aero.html
+++ b/Aero.html
@@ -106,8 +106,8 @@
 		<div class="grid-span">
      		 		 <h2>The history behind it</h2>
 					 It was early 2015, Oulton Park had a race weekend on. I put in a late entry to just race on the Saturday. Having never riden the chassis before, this was it's debut to see what it could do. My dad was stood on the pitwall monitoring laptimes when he overheard a fellow spectator say 'what's that; looks like a horse', someone responded; 'no, more like a donkey'. My dad couldn't stop laughing. Problem was, he was right. The name has stuck ever since. What it did promote is the rapid redesign of the fairings. They were ugly and boxy, I needed to put a few months aside to do the job properly this time; build the whole bike as one with clay and plastercene rather than individual components. 
-          Making moulds are probably the one area which have cost the most time so far. I’m on the 3rd set now and fortunately I’m nearly there. There will always be changes to make but generally I am pleased with the aero and the look. Interestingly the input of labour Vs performance output with all things composites is not a figure I would like to work out. I just aknowledge it is a must and get on with it. Building up each
-          component is a solace for me, I’m busy thinking of moutains and ice cream while I’m applying plastercene and cardboard to build them up to the shape I want. Every so often there’s a need to put on some resin or filler to give the backing
+          Making moulds are probably the one area which have cost the most time so far. I’m on the 3rd set now and fortunately I’m nearly there. There will always be changes to make but generally I am pleased with the aero and the look. Interestingly the input of labour Vs performance output with all things composites is not a figure I would like to work out. I just acknowledge it is a must and get on with it. Building up each
+          component is a solace for me, I’m busy thinking of mountains and ice cream while I’m applying plasticene and cardboard to build them up to the shape I want. Every so often there’s a need to put on some resin or filler to give the backing
           some strength so that’s what drags a project out over many weeks.
         </div>
 		<div class="grid-left-two">
@@ -115,13 +115,13 @@
           This is probably as tricky as I want to go with wet lay moulds as there is multiple opposing compound angles at work which means that releasing the final piece from the mould will rely on a slightly sympathetic layup of layers of fabric to ensure
           there is enough flex in the structure to manipulate around the mould without breaking.
         <br>
-          These 3 are made in my traditional method of using scrap card to get the basic shape; backed with fibreglass resin. Then on with the plastercene to blend the hard edges and then when within 5mm of the final shape I go on with the filler. From here on
+          These 3 are made in my traditional method of using scrap card to get the basic shape; backed with fibreglass resin. Then on with the plasticene to blend the hard edges and then when within 5mm of the final shape I go on with the filler. From here on
           in there’s about 30 hours on each mould to produce a part. Lots of sanding of the filler then when your happy or you adopt the Chinese methodology of ‘that’ll do’, then your onto spraying a high build primer to seal and provide a harder surface.
           Guess what’s next; more sanding with fine grit down to a baby bum finish. If you notice small blemishes fill with fine filler otherwise take up yoga and build it up again until you’re happy.
         </div>
         <div class="grid-wide-center">
           <h2>PVA glue, wax and then tooling gelcoat; fig 2 and 3</h2>
-          Next step is a coat of PVA glue followed by a coat or 2 of wax; I’ve scraped really priceless work without the wax. Then followed by 2 coats of the bright green tooling gel coat which will form the hard smooth face of the mould surface once cured. This green tooling coat gets back with many layers of fibre glass as reinforment to it's structure.
+          Next step is a coat of PVA glue followed by a coat or 2 of wax; I’ve scrapped really priceless work without the wax. Then followed by 2 coats of the bright green tooling gel coat which will form the hard smooth face of the mould surface once cured. This green tooling coat gets back with many layers of fibre glass as reinforment to it's structure.
         </div>
         <div class="contain">
 			<a target="_blank" href="img/13.jpg">
