--- a/Introduction.html
+++ b/Introduction.html
@@ -117,7 +117,7 @@
           on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class before I got a chance to start pushing. <br>
 		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
           Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day; I would look like I had! If I only worked on everyone else’s bike I wouldn’t learn how to
-          build a chassis. On that thought; education has for quite some time been sold as a make or break life event; perhaps I am too sinnicle but the generations who have gone through University because they lost their way really stand out to me. There is also not enough flexibility to think outside the box. These days I believe we can all
+          build a chassis. On that thought; education has for quite some time been sold as a make or break life event; perhaps I am too cynical but the generations who have gone through University because they lost their way really stand out to me. There is also not enough flexibility to think outside the box. These days I believe we can all
           stand taller without a University degree with what is available to us using resources online and networking along with motivation.
           
         </div>
