--- a/Swingarm.html
+++ b/Swingarm.html
@@ -146,14 +146,14 @@
         <div class="grid-narrow-center">
           <h2>The result</h2>
           Now I know what you’re thinking; where’s the consistency? No food was allowed in or out of the tester once testing commenced and the measurements were done a few times. The new swingarm is constructed with 5083 sheet throughout purely because it avoids the
-          need for post weld heat treatment. Pivot mounts and hub clamp were machined from roled solid. Cast blocks are easy to obtain but roled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
-          condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adament in years to come equipment like this will be the cherished jewels. 
+          need for post weld heat treatment. Pivot mounts and hub clamp were machined from rolled solid. Cast blocks are easy to obtain but rolled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
+          condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adamant in years to come equipment like this will be the cherished jewels. 
           
         </div>
         <div class="grid-left-two">
           <h2>Other additions</h2>
           To finish of the fabrication I made a cushless drive hub along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I would have prefered to use a 7000 series aluminium for the construction of the rear arm; 
-		  such as 7020. It offers greater tensile strength per relative thickness of section used in comparison to 5083, however 7020 is hard to come by and expensive in particulary sizes. It's also likely to require heat treatment and post machining processes 
+		  such as 7020. It offers greater tensile strength per relative thickness of section used in comparison to 5083, however 7020 is hard to come by and expensive in particular sizes. It's also likely to require heat treatment and post machining processes 
 		  to compensate for the distortion. Mine will be slightly heavier as a result due to the use of thicker section sizes. It will be favourable to the bikes weight distribution at least which is currently somewhat biased the front: Cue the carbon front fork project!
         </div>
       </div>
