corrupt tree fix

--- a/Swingarm.html
+++ b/Swingarm.html
@@ -26,7 +26,7 @@
     <script type='text/javascript' src="scripts/script.js"></script>
     <style>
       html {
-        background: url("img/039.jpg") no-repeat center center fixed;
+        background: url("img/2018 bike.jpg") no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -103,17 +103,16 @@
       <div class="main-container">
         <div class="grid-span">
           <h2>The history behind it</h2>
-          The swingarm is my latest venture in the run of component development. I have always experienced unwanted flex as I up the pace on corner entry. A full body weave as if it were hinged in the middle when at full lean on harsh bumps. The frame is still a work in progress but
-          that aside I considered in principal that a road derived old cast swingarm is probably lacking in stiffness. Looking back to the alterations done by HRC 20 years ago I can see it had issues. I wasn’t too impressed with their tactics
-          though. They produced a thick 6mm plate that you could weld onto the top of the swingarm to add lateral stiffness. What a bodge! Then you could buy various cast variations with additional internal webs. They gave in and went double sided which is a
-          logical step. I’m sticking with the single sided for now as I want to maintain the ability for fast wheel changes.
-        </div>
-
-        <div class="image-right-container" width="400px">
+		   <div class="image-right-container" width="400px">
           <img src="img/11.jpg" class="image-right" width="380px">
           <div class="image-text">
             Hub clamp: Ripper cut on the Bridgeport using a rotary table
           </div>
+        </div>
+          I have always experienced unwanted flex as I up the pace on corner entry. A full body weave as if it were hinged in the middle when at full lean on harsh bumps. The frame is still a work in progress but
+          that aside I considered in principal that a road derived old cast swingarm is probably lacking in stiffness. Looking back to the alterations done by HRC 20 years ago I can see it had issues. I wasn’t too impressed with their tactics
+          though. They produced a thick 6mm plate that you could weld onto the top of the swingarm to add lateral stiffness. What a bodge! Then you could buy various cast variations with additional internal webs. They gave in and went double sided which is a
+          logical step. I’m sticking with the single sided for now as I want to maintain the ability for fast wheel changes.
         </div>
 
         <div class="grid-wide-center">
@@ -124,9 +123,9 @@
         </div>
 		
 		<div class="image-left-container" width="400px">
-          <img src="img/arm.jpg" class="image-left" width="380px">
+          <img src="img/concrete press.jpg" class="image-left" width="380px">
           <div class="image-text">
-            Outter panel cold rolled and trimmed to fit
+            Large concrete press with M16 clamp threads
           </div>
         </div>
 		
@@ -150,6 +149,14 @@
           condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adamant in years to come equipment like this will be the cherished jewels. 
           
         </div>
+		
+		<div class="image-left-container" width="400px">
+          <img src="img/swingarm lower.jpg" class="image-left" width="380px">
+          <div class="image-text">
+            Formed panels trimmed ready for welding
+          </div>
+        </div>
+		
         <div class="grid-left-two">
           <h2>Other additions</h2>
           To finish of the fabrication I made a cushless drive hub along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I would have prefered to use a 7000 series aluminium for the construction of the rear arm; 
